--- a/ive/src/style.css
+++ b/ive/src/style.css
@@ -170,7 +170,7 @@ div.news1 {
     width: 100%;
     height: 0;
     padding-top: calc(450 / 800 * 100%);
-    background-image: url('img/ive_lovedive.jpg');
+    background-image: url('./src_assets/ive_lovedive.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
@@ -181,7 +181,7 @@ div.news2 {
     width: 100%;
     height: 0;
     padding-top: calc(450 / 800 * 100%);
-    background-image: url('img/ive_theshow.png');
+    background-image: url('./src_assets/ive_theshow.png');
     background-size: cover;
     background-position: center;
     position: relative;
@@ -191,7 +191,8 @@ div.news3 {
     width: 100%;
     height: 0;
     padding-top: calc(450 / 800 * 100%);
-    background-image: url('img/ive_prize.jpg');
+    background-image: url('./src_assets/ive_prize.jpg');
+
     background-size: cover;
     background-position: center;
     position: relative;
